k8s/base/network/allow-ingress-to-kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-kube-state-metrics
spec:
  podSelector:
    matchLabels:
      app: kube-state-metrics
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 8080
