k8s/base/network/allow-ingress-to-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mood-app
        - podSelector:
            matchLabels:
              app: redis-exporter
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 6379
